D10 esta almenta a largura, mas nao a altura

--- a/index.html
+++ b/index.html
@@ -27,35 +27,35 @@
         <button id="generate-board">VQV</button>
         <!-- tabela -->
         <table id="pixel-board">
-            <tr>
+            <tr class="tr">
                 <td class="pixel" aria-selected="">1</td>
                 <td class="pixel">2</td>
                 <td class="pixel">3</td>
                 <td class="pixel">4</td>
                 <td class="pixel">5</td>
             </tr>
-            <tr>
+            <tr class="tr">
                 <td class="pixel">1</td>
                 <td class="pixel">2</td>
                 <td class="pixel">3</td>
                 <td class="pixel">4</td>
                 <td class="pixel">5</td>
             </tr>
-            <tr>
+            <tr class="tr">
                 <td class="pixel">1</td>
                 <td class="pixel">2</td>
                 <td class="pixel">3</td>
                 <td class="pixel">4</td>
                 <td class="pixel">5</td>
             </tr>
-            <tr>
+            <tr class="tr">
                 <td class="pixel">1</td>
                 <td class="pixel">2</td>
                 <td class="pixel">3</td>
                 <td class="pixel">4</td>
                 <td class="pixel">5</td>
             </tr>
-            <tr>
+            <tr class="tr">
                 <td class="pixel">1</td>
                 <td class="pixel">2</td>
                 <td class="pixel">3</td>
