--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   </header>
   <table>
     <tr id="color-palette">
-      <td class="color black selected">preto</td>
-      <td class="color red">vermelho</td>
-      <td class="color blue">azul</td>
-      <td class="color green">verde</td>
+      <td class="color black"></td>
+      <td class="color red"></td>
+      <td class="color green"></td>
+      <td class="color blue"></td>
     </tr>
   </table>
   <table id="pixel-board">
