--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
     <header>
         <h1 id="title">Paleta de Cores</h1>
     </header>
-    <section id= "pai-button">
+    <section>
         <div id="color-palette">
 
         </div>
     </section>
+    <div id= "pai-button"></div>
     <section>
         <table  id="pixel-board">
             <tr id="linha-1">
