--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <div id = color-palette>
       <h3>Cores fixas</h4>
       <span class = 'color selected' id = black></span>
-      <!-- <span class = color id = blue></span>
+      <span class = color id = blue></span>
       <span class = color id = yellow></span>
-      <span class = color id = red></span> -->
+      <span class = color id = red></span>
     </div>
     
     
