adicionado a cor black a class selected para inicar com a cor preta

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div id="color-palette" class="palette-table">
       <div id="palette-line" class="tr">
-        <div class="color td selected"></div>
+        <div class="color td selected corInicio"></div>
         <div class="color td"></div>
         <div class="color td"></div>
         <div class="color td"></div>
