--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <h1 id = 'title'>Paleta de Cores</h1>
   <section id="color-palette">
   </section>
+  <button id='clear-board'>Limpar</button>
   <section id='pixel-board'> 
   </section>
   <script src="script.js"></script>
