--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="color blue"></div>
     </div>
     </section>
-
+    <div class="button-div"></div>
     <section >
       <div id="pixel-board">
         <div class="pixel"></div>
