foi criado um botao para limpar os pixels pintados (item 9)

--- a/index.html
+++ b/index.html
@@ -9,18 +9,21 @@
 </head>
 <body>
   <section class="main">
-    <h1 id="title">Paleta de Cores</h1>
+    <div class="content">
+      <h1 id="title">Paleta de Cores</h1>
 
-    <div id="color-palette" class="palette-table">
-      <div id="palette-line" class="tr">
-        <div class="color td selected corInicio"></div>
-        <div class="color td"></div>
-        <div class="color td"></div>
-        <div class="color td"></div>
+      <div id="color-palette" class="palette-table">
+        <div id="palette-line" class="tr">
+          <div class="color td selected corInicio"></div>
+          <div class="color td"></div>
+          <div class="color td"></div>
+          <div class="color td"></div>
+        </div>
       </div>
-    </div>
+      <button id="clear-board">Limpar</button>
 
-    <div id="pixel-board"></div>
+      <div id="pixel-board"></div>
+      </div>
   </section>
 
   <script src="/script.js"></script>
