--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 <body>
     <h1 id="title">Paleta de Cores</h1>
     <ul id="color-palette">
-        <li class="color selected"></li>
-        <li class="color"></li>
-        <li class="color"></li>
-        <li class="color"></li>
+        <li class="color selected" id="black"></li>
+        <li class="color"  id="red"></li>
+        <li class="color" id="slateblue"></li>
+        <li class="color" id="pink"></li>
     </ul>
+    <button id="button"></button>
     <table id="pixel-board">
         
     </table>
