--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <li class="color" id="slateblue"></li>
         <li class="color" id="pink"></li>
     </ul>
-    <button id="button"></button>
+    <button id="clear-board"></button>
     <table id="pixel-board">
         
     </table>
