Requisitos 8 e 9 em andamento

--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
         <div class="color" id="blue"></div>
     </div>
 
+    <button id="clear-board">Limpar</button>
+
+    <br></br>
+
     <!--O quadro de "pixels" deve ter 5 elementos de largura e 5 elementos de comprimento;
         O quadro de "pixels" deve possuir o id denominado pixel-board, ao passo que cada "pixel" individual dentro do quadro deve possuir a classe denominada pixel; -->
     <div id="pixel-board">
