--- a/index.html
+++ b/index.html
@@ -1,24 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Project Pixels Art</title>
+    <title>Paleta de Cores</title>
 </head>
 <body>
     <header>
-        <h1 id='title'>Paleta de Cores</h1>
+        <h1 id="title">Paleta de Cores</h1>
     </header>
-    <section>
-        <div id='color-palette'></div>
+    <main>
+        <div id="color-palette">
+            <div class="color selected" id="black">
+            </div> 
+            <div class="color" id="corUm">
+            </div>
+            <div class="color" id="corDois">
+            </div>
+            <div class="color" id="corTres">
+            </div>
 
-        <button id="clear-board">Limpar</button>
-        <br>
-        <input type="number" id="board-size" value="5" min="5" max="50"><button id="generate-board">VQV</button>
-        <input type="number" id="board-size" min="1" max="50"><button id="generate-board">VQV</button>
+        </div>
+        <div id="opcoes">
+            <div id="botao">
+                <button id="clear-board">Limpar</button>
+            </div> 
+            <input id="board-size" type="number" min="1" max="50"> 
+            <div id="entrada">
+                <button id="generate-board">VQV</button>
+            </div>
+        </div>    
+        <table id="pixel-board">
 
-        <div id="pixel-board"></div>
-    </section>
-    <script src="script.js"></script>
+        </table>
+
+    </main>
+
+
+    <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
