9 - Crie um botão que, ao ser clicado, limpa o quadro preenchendo a cor de todos seus pixels com branco.

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 
     </div>
 
+    <button id="clear-board">Linpar</button>
+
     <script type='text/javascript' src='script.js'></script>
 </body>
 
