--- a/index.html
+++ b/index.html
@@ -12,28 +12,25 @@
 <body>
     <h1 id='title'>Paleta de Cores</h1>
 
-    <div id='color-palette'>
-        <span id='primary-color' data-color="#000000" class='color selected'></span>
-
-        <span id='second-color' data-color="#ed4e23" class='color'></span>
-        
-        <span id='third-color' data-color="#3970fe" class='color'></span>
-
-        <span id='fourth-color' data-color="#438104" class='color'></span>
-    
-    </div>
-
     <input id="input-second" class="input-colors" type="color" value="#ed4e23">
 
     <input id="input-third" class="input-colors" type="color" value="#3970fe">
 
     <input id="input-fourth" class="input-colors" type="color" value="#438104">
 
-    <div id="pixel-board">
+    <div id='color-palette'>
+        <span id='primary-color' data-color="#000000" class='color selected'></span>
 
+        <span id='second-color' data-color="#ed4e23" class='color'></span>
+
+        <span id='third-color' data-color="#3970fe" class='color'></span>
+
+        <span id='fourth-color' data-color="#438104" class='color'></span>
     </div>
 
-    <button id="clear-board">Linpar</button>
+    <button id="clear-board">Limpar</button>
+
+    <div id="pixel-board"></div>
 
     <script type='text/javascript' src='script.js'></script>
 </body>
