--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
       <div class="color" id="blue"></div>
       <div class="color" id="green"></div>
     </div>
-    <div id="clear-board">
-      <input type="button" value="limpar"></div>
+    <div >
+      <button id="clear-board" >Limpar</button>
+    </div>
+    
   <div id="pixel-board">
   </div>
       
