--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 
         <span id='fourth-color' data-color="#438104" class='color'></span>
     </div>
-
+    <label for="board-size">Defina um tamanho para o quadro de pixels: </label>
+    <input type="number" id="board-size">
+    <button id="generate-board">VQV</button> <br>
     <button id="clear-board">Limpar</button>
 
     <div id="pixel-board"></div>
