--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
 </head>
 
 <body>
-  <h1 id="title">Paleta de Cores</h1>
-
-  <div id="color-palette"></div>
+  <header>
+    <h1 id="title">Paleta de Cores</h1>
+  </header>
+  <div id="div-palette">
+    <div id="color-palette"></div>
+  </div>
   <div id="div-botao">
     <button type="submit" id="clear-board">Limpar</button>
 
