--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <div class="color" id="yellow"></dv>
   </section>
 
+  <input type="text" id="board-size">
+  <button id="generate-board">VQV</button>
+
   <button id="clear-board">Limpar</button>
 
  <section id="pixel-board"></section>    
