--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<div class="color"></div>
 	</section>
 
-	<section>
+	<section class="todos-botoes">
 		<button id="clear-board">Limpar</button>
 
 		<input type="number" id="board-size" min="5" max="50">
