--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <body>
   <header>
     <h1 id="title">Paleta de Cores</h1>
-    
   </header>
   <table>
     <tr id="color-palette">
@@ -22,9 +21,10 @@
       <td class="color blue"></td>
     </tr>
   </table>
+  <nav><input type="text" size="10"><input type="submit" value="Alterar" /><button id='clear-btn'>"Limpar"</button></nav>
   <table id="pixel-board">
-   </table>
-   
+  </table>
+
   <script src="script.js"></script>
 </body>
 
