Muda quase toda a estruturação do projeto - agora com tabelas, e faz os requisitos de escuta de evento e troca de classe com relação a selected

--- a/index.html
+++ b/index.html
@@ -10,18 +10,49 @@
 <body>
     <h1 id="title">Paleta de Cores</h1>
     <div id="color-palette">
-        <div class="selected color"></div>
+        <div class="color"></div>
         <div class="color"></div>
         <div class="color"></div>
         <div class="color"></div>
     </div>
-    <div id="pixel-board">
-        <div class="lines"></div>
-        <div class="lines"></div>
-        <div class="lines"></div>
-        <div class="lines"></div>
-        <div class="lines"></div>
-    </div>        
+    <button id="clear-board">Limpar</button> 
+    <table id="pixel-board">
+      <tr class="tableRow">
+        <td class="pixel"></td>
+        <td class="pixel"></td>
+        <td class="pixel"></td>
+        <td class="pixel"></td>
+        <td class="pixel"></td>
+      </tr>
+      <tr class="tableRow">
+        <td class="pixel"></td>
+        <td class="pixel"></td>
+        <td class="pixel"></td>
+        <td class="pixel"></td>
+        <td class="pixel"></td>
+      </tr>
+      <tr class="tableRow">
+        <td class="pixel"></td>
+        <td class="pixel"></td>
+        <td class="pixel"></td>
+        <td class="pixel"></td>
+        <td class="pixel"></td>
+      </tr>
+      <tr class="tableRow">
+        <td class="pixel"></td>
+        <td class="pixel"></td>
+        <td class="pixel"></td>
+        <td class="pixel"></td>
+        <td class="pixel"></td>
+      </tr>
+        <tr class="tableRow">
+        <td class="pixel"></td>
+        <td class="pixel"></td>
+        <td class="pixel"></td>
+        <td class="pixel"></td>
+        <td class="pixel"></td>
+      </tr>
+    </table>
 </body>
 <script src="script.js"></script>
 </html>
