--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div id='color-palette'>
         <span id='primary-color' data-color="#000000" class='color selected'></span>
 
-        <span id='second-color' data-color="#ed4e23" class='color'></span>
+        <span id='second-color' data-color="#FF0000" class='color'></span>
 
         <span id='third-color' data-color="#3970fe" class='color'></span>
 
