Concertando as cores azul e verde do exercicio 8

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 
         <span id='second-color' data-color="#FF0000" class='color'></span>
 
-        <span id='third-color' data-color="#3970fe" class='color'></span>
+        <span id='third-color' data-color="#0000FF" class='color'></span>
 
-        <span id='fourth-color' data-color="#438104" class='color'></span>
+        <span id='fourth-color' data-color="#00FF00" class='color'></span>
     </div>
     <label for="board-size">Defina um tamanho para o quadro de pixels: </label>
     <input type="number" id="board-size">
