--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <span id='third-color' data-color="#0000FF" class='color'></span>
 
-        <span id='fourth-color' data-color="#00FF00" class='color'></span>
+        <span id='fourth-color' data-color="#008000" class='color'></span>
     </div>
     <label for="board-size">Defina um tamanho para o quadro de pixels: </label>
     <input type="number" id="board-size">
