--- a/index.html
+++ b/index.html
@@ -17,37 +17,11 @@
     <div class="color"></div>  
   </div>
   <button id="clear-board">Limpar</button>
-  <div id="pixel-board">
-    <div class="pixel"></div>
-    <div class="pixel"></div>
-    <div class="pixel"></div>
-    <div class="pixel"></div>
-    <div class="pixel"></div>
-
-    <div class="pixel"></div>
-    <div class="pixel"></div>
-    <div class="pixel"></div>
-    <div class="pixel"></div>
-    <div class="pixel"></div>
-
-    <div class="pixel"></div>
-    <div class="pixel"></div>
-    <div class="pixel"></div>
-    <div class="pixel"></div>
-    <div class="pixel"></div>
-
-    <div class="pixel"></div>
-    <div class="pixel"></div>
-    <div class="pixel"></div>
-    <div class="pixel"></div>
-    <div class="pixel"></div>
-
-    <div class="pixel"></div>
-    <div class="pixel"></div>
-    <div class="pixel"></div>
-    <div class="pixel"></div>
-    <div class="pixel"></div>
+  <div id="gridSize">
+    <input min="1" type="number" id="board-size" placeholder="Digite o tamanho do grid">
+    <button id="generate-board">VQV</button>
   </div>
+  <table cellspacing="0" id="pixel-board"></table>
   <script src="script.js"></script>
 </body>
 </html>
