--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="color" id="yellow"></dv>
   </section>
 
-  <input type="text" id="board-size">
+  <input type="number" id="board-size" min="1">
   <button id="generate-board">VQV</button>
 
   <button id="clear-board">Limpar</button>
