--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <ul id="color-palette"></ul>
     </div>
     <h5 id="clear-board">Limpar</h5>
-    <input id="board-size">
+    <input id="board-size" type="number" min="1">
     <h5 id="generate-board">VQV</h5>
     <div id="pixel-board"></div>
 
