Adiciona botão de limpar o quadro.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <table id="pixel-row">
     </table>
   </div>
+  <div>
+    <button id="clear-board">Limpar Quadro</button>
+  </div>
   <script type="text/javascript" src="script.js"></script>
 </body>
 
