--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Pixels-Arts</title>
 </head>
 <body>
@@ -11,7 +12,12 @@
         <h1 id='title'>Paleta de Cores</h1>
     </header>
     <section>
-        <div id='color-palette'></div>
+        <div id='color-palete'>
+            <div id="color">cor1</div>
+            <div id="color">cor2</div>
+            <div id="color">cor3</div>
+            <div id="color">cor4</div>
+        </div>
         <div id="pixel-board"></div>
     </section>
 </body>
