--- a/index.html
+++ b/index.html
@@ -18,47 +18,16 @@
     <div class="color"></div>
   </div>
 
+  <div id="input-align">
+    <input type="number" min="1" max="50" name="" id="board-size" value="5">
+    <button id="generate-board">VQV</button>
+  </div>
+  
   <div id="button-align">
     <button id="clear-board">Limpar</button>
   </div>
 
-  <table id="pixel-board">
-    <tr>
-        <td class="pixel"></td>
-        <td class="pixel"></td>
-        <td class="pixel"></td>
-        <td class="pixel"></td>
-        <td class="pixel"></td>
-    </tr>
-    <tr>
-      <td class="pixel"></td>
-      <td class="pixel"></td>
-      <td class="pixel"></td>
-      <td class="pixel"></td>
-      <td class="pixel"></td>
-    </tr>
-    <tr>
-      <td class="pixel"></td>
-      <td class="pixel"></td>
-      <td class="pixel"></td>
-      <td class="pixel"></td>
-      <td class="pixel"></td>
-    </tr>
-    <tr>
-      <td class="pixel"></td>
-      <td class="pixel"></td>
-      <td class="pixel"></td>
-      <td class="pixel"></td>
-      <td class="pixel"></td>
-    </tr>
-    <tr>
-      <td class="pixel"></td>
-      <td class="pixel"></td>
-      <td class="pixel"></td>
-      <td class="pixel"></td>
-      <td class="pixel"></td>
-    </tr>
-</table>
+  <table id="pixel-board"></table>
 
   <script src="script.js"></script>
 </body>
