cria um input onde altera o tamanho da matriz quando digita o valor e clica no VQV (item 10)

--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
           <div class="color td"></div>
         </div>
       </div>
-      <button id="clear-board">Limpar</button>
+      
+      <section class="btn-section">
+        <button id="clear-board">Limpar</button>
+        <input type="number" min="5" max="50" id="board-size">
+        <button id="generate-board">VQV</button>
+      </section>
 
       <div id="pixel-board"></div>
       </div>
