--- a/index.html
+++ b/index.html
@@ -27,7 +27,43 @@
     <button id="clear-board">Limpar</button>
   </div>
 
-  <table id="pixel-board"></table>
+  <table id="pixel-board">
+    <tr>
+      <td class="pixel"></td>
+      <td class="pixel"></td>
+      <td class="pixel"></td>
+      <td class="pixel"></td>
+      <td class="pixel"></td>
+    </tr>
+    <tr>
+      <td class="pixel"></td>
+      <td class="pixel"></td>
+      <td class="pixel"></td>
+      <td class="pixel"></td>
+      <td class="pixel"></td>
+    </tr>
+    <tr>
+      <td class="pixel"></td>
+      <td class="pixel"></td>
+      <td class="pixel"></td>
+      <td class="pixel"></td>
+      <td class="pixel"></td>
+    </tr>
+    <tr>
+      <td class="pixel"></td>
+      <td class="pixel"></td>
+      <td class="pixel"></td>
+      <td class="pixel"></td>
+      <td class="pixel"></td>
+    </tr>
+    <tr>
+      <td class="pixel"></td>
+      <td class="pixel"></td>
+      <td class="pixel"></td>
+      <td class="pixel"></td>
+      <td class="pixel"></td>
+    </tr>
+  </table>
 
   <script src="script.js"></script>
 </body>
