--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
     </div>
 
     <button id="clear-board">Limpar</button>
+
+    <input type="number" min="1" id="board-size">
+
+    <button id="generate-board">VQV</button>
     
     <div id="pixel-board">
         <!-- <div class="pixel"></div> -->
