corrigindo input no html para type: number

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       
       <section class="btn-section">
         <button id="clear-board">Limpar</button>
-        <input type="range" min="5" max="50" id="board-size" >
+        <input type="number" min="1" id="board-size" >
         <button id="generate-board">VQV</button>
       </section>
 
