--- a/index.html
+++ b/index.html
@@ -10,18 +10,16 @@
 </head>
 
 <body>
-    <!--1. Adicione à página o título "Paleta de Cores"
-        O título deverá ficar dentro de uma tag h1 com o id denominado title;
-        O texto do título deve ser exatamente "Paleta de Cores". -->
+    <!-- Requisito 1 -->
     <header>
         <h1 id="title">Paleta de Cores</h1>
     </header>
 
-    <!--2. A paleta de cores deve ser um elemento com id denominado color-palette, ao passo que cada 
-        cor individual da paleta de cores deve possuir a classe color;
-        3. Adicione a cor preta como a primeira cor da paleta de cores. -->
+    <!-- Requisito 2 -->
+    <!-- Requisito 3 -->
+    <!-- Requisito 6 -->
     <div id="color-palette">
-        <!--"https://www.maujor.com/tutorial/sintaxetut.php" A CSS 2 permite declarar mais de uma classe, desde que o nome das classes sejam separados por um espaço. -->
+        <!-- A CSS 2 permite declarar mais de uma classe, desde que o nome das classes sejam separados por um espaço "https://www.maujor.com/tutorial/sintaxetut.php" -->
         <div class="color selected" id="black"></div>
         <div class="color" id="red"></div>
         <div class="color" id="green"></div>
