--- a/index.html
+++ b/index.html
@@ -11,22 +11,16 @@
     <header>
         <h1 id="title">Paleta de Cores</h1>
     </header>
-    <div>
+    <section>
         <table id="color-palette">
-            <tr id="black" class="color">
-                <th></th>
-            </tr>
-            <tr id="red" class="color">
-                <th></th>
-            </tr>
-            <tr id="blue" class="color">
-                <th></th>
-            </tr>
-            <tr id="green" class="color">
-                <th></th>
+            <tr>
+                <td id="black" class="color"></td>
+                <td id="red" class="color"></td>
+                <td id="blue" class="color"></td>
+                <td id="green" class="color"></td>
             </tr>
         </table>
-    </div>
+    </section>
     <script src="script.js"></script>
 </body>
 </html>
