Adiciona o botão clear e começa a resolução da 11 e da 12

--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
         <div class="color"></div>
         <div class="color"></div>
     </div>
-    <button id="clear-board">Limpar</button> 
+    <input type="text" id="board-size">
+    <button id="generate-board">VQV</button>
     <table id="pixel-board">
-      <tr class="tableRow">
+      <!-- <tr class="tableRow">
         <td class="pixel"></td>
         <td class="pixel"></td>
         <td class="pixel"></td>
@@ -51,8 +52,9 @@
         <td class="pixel"></td>
         <td class="pixel"></td>
         <td class="pixel"></td>
-      </tr>
+      </tr> -->
     </table>
+    <button id="clear-board">Limpar</button> 
 </body>
 <script src="script.js"></script>
 </html>
