requisito 9, limpar pixels

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <div class="color" id="green"></div>
   </div>
 
+  <button id="clear-board" onclick="limparPixels()">Limpar</button>
+
   <section id="pixel-board"></section>
 
 
