D10 o desafio esta com erro, criando um segumdo quadro sem apagar o quadro anterior

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -26,41 +26,41 @@
         <!-- btn VQV -->
         <button id="generate-board">VQV</button>
         <!-- tabela -->
-        <table id="pixel-board">
+        <table id="pixel-board" class="pixel-board">
             <tr class="tr">
-                <td class="pixel" aria-selected="">1</td>
-                <td class="pixel">2</td>
-                <td class="pixel">3</td>
-                <td class="pixel">4</td>
-                <td class="pixel">5</td>
+                <td class="pixel td"></td>
+                <td class="pixel td"></td>
+                <td class="pixel td"></td>
+                <td class="pixel td"></td>
+                <td class="pixel td"></td>
             </tr>
             <tr class="tr">
-                <td class="pixel">1</td>
-                <td class="pixel">2</td>
-                <td class="pixel">3</td>
-                <td class="pixel">4</td>
-                <td class="pixel">5</td>
+                <td class="pixel td"></td>
+                <td class="pixel td"></td>
+                <td class="pixel td"></td>
+                <td class="pixel td"></td>
+                <td class="pixel td"></td>
             </tr>
             <tr class="tr">
-                <td class="pixel">1</td>
-                <td class="pixel">2</td>
-                <td class="pixel">3</td>
-                <td class="pixel">4</td>
-                <td class="pixel">5</td>
+                <td class="pixel td"></td>
+                <td class="pixel td"></td>
+                <td class="pixel td"></td>
+                <td class="pixel td"></td>
+                <td class="pixel td"></td>
             </tr>
             <tr class="tr">
-                <td class="pixel">1</td>
-                <td class="pixel">2</td>
-                <td class="pixel">3</td>
-                <td class="pixel">4</td>
-                <td class="pixel">5</td>
+                <td class="pixel td"></td>
+                <td class="pixel td"></td>
+                <td class="pixel td"></td>
+                <td class="pixel td"></td>
+                <td class="pixel td"></td>
             </tr>
             <tr class="tr">
-                <td class="pixel">1</td>
-                <td class="pixel">2</td>
-                <td class="pixel">3</td>
-                <td class="pixel">4</td>
-                <td class="pixel">5</td>
+                <td class="pixel td"></td>
+                <td class="pixel td"></td>
+                <td class="pixel td"></td>
+                <td class="pixel td"></td>
+                <td class="pixel td"></td>
             </tr>
         </table>
     </main>
