--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </div>
 
   <div id="input-align">
-    <input type="number" min="1" max="50" name="" id="board-size" value="5">
+    <input type="number" min="1" max="50" name="" id="board-size" value="">
     <button id="generate-board">VQV</button>
   </div>
   
