D10 mudando o type do input para numbre

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <!-- botão limpar -->
         <button id="clear-board">Limpar</button>
         <!-- opção para aumentar ou diminuir o quadro -->
-        <input type="text" id="board-size" placeholder="Tamanho do quadro Ex: 7">
+        <input type="number" id="board-size" placeholder="Tamanho do quadro Ex: 7">
         <!-- btn VQV -->
         <button id="generate-board">VQV</button>
         <!-- tabela -->
