--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div id="color-palette">
         <div class="tr"> </div>
-            <div id="paleta1" class="color"></div>
+            <div id="paleta1" class="color selected"></div>
             <div id="paleta2" class="color"></div>
             <div id="paleta3" class="color"></div>
             <div id="paleta4" class="color"></div>
