--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
   <section id="color-palette">
     <div class="color selected" id="black"></div>
-    <div class="color" id="blue"></div>
+    <!--<div class="color" id="blue"></div>
     <div class="color" id="green"></div>
-    <div class="color" id="yellow"></dv>
+    <div class="color" id="yellow"></dv> -->
   </section>
 
   <input type="number" id="board-size" min="1">
