--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
 </head>
 <body id="corpo">
     <h1 id="title">Paleta de Cores</h1>
+
+    <div id="tabela1">
+
+    </div>
+
+    <div id="botao-limpa">
+
+    </div>
+
+    <div id="tabela2">
+
+    </div>
    
 
     <script src="script.js"></script>
