--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
     <div class="color" id="red"></div>
     <div class="color" id="blue"></div>
     <div class="color" id="green"></div>
-  </section>  
-  <button id="clear-board">Limpar</button>
-  <input type="number" min="1" id="board-size">
-  <button id="generate-board">VQV</button>
-  <section id="pixel-board" class="pixelBoard">
+  </section>
+  <section id="board">
+    <button id="clear-board">Limpar</button>
+    <input type="number" min="1" id="board-size">
+    <button id="generate-board">VQV</button>
+    <section id="pixel-board" class="pixelBoard">
   </section>
 </body>
 <script src="script.js"></script>
