D8 refazendo para resolver erros e html , trocando setion por div

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
             </h1>
         </header>
         <!-- Paleta de cores -->
-        <section class="paleta-container">
+        <div class="paleta-container">
             <ul id="color-palette">
                 
             </ul>
-        </section>
+        </div>
         <!-- botão limpar -->
         <button id="clear-board">
             Limpar
