Adiciona algumas alterações de style

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Paleta de Cores</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<center>
 <body>
   <header>
     <h1 id="title">Paleta de Cores</h1>
@@ -19,44 +20,9 @@
   </header>
     <input type="text" id="board-size">
     <button id="generate-board">VQV</button>
-    <table id="pixel-board">
-      <tr class="tableRow">
-        <td class="pixel"></td>
-        <td class="pixel"></td>
-        <td class="pixel"></td>
-        <td class="pixel"></td>
-        <td class="pixel"></td>
-      </tr>
-      <tr class="tableRow">
-        <td class="pixel"></td>
-        <td class="pixel"></td>
-        <td class="pixel"></td>
-        <td class="pixel"></td>
-        <td class="pixel"></td>
-      </tr>
-      <tr class="tableRow">
-        <td class="pixel"></td>
-        <td class="pixel"></td>
-        <td class="pixel"></td>
-        <td class="pixel"></td>
-        <td class="pixel"></td>
-      </tr>
-      <tr class="tableRow">
-        <td class="pixel"></td>
-        <td class="pixel"></td>
-        <td class="pixel"></td>
-        <td class="pixel"></td>
-        <td class="pixel"></td>
-      </tr>
-        <tr class="tableRow">
-        <td class="pixel"></td>
-        <td class="pixel"></td>
-        <td class="pixel"></td>
-        <td class="pixel"></td>
-        <td class="pixel"></td>
-      </tr>
-    </table>
+    <table id="pixel-board"></table>
     <button id="clear-board">Limpar</button> 
 </body>
+</center>
 <script src="script.js"></script>
 </html>
