D10 botao para usuario selecionar valor

--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
         </header>
         <!-- Paleta de cores -->
         <div class="paleta-container">
-            <ul id="color-palette">
-                
-            </ul>
+            <ul id="color-palette"></ul>
         </div>
         <!-- botão limpar -->
         <button id="clear-board">
