deixa todos os pixels branco

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <h1 id="title">Paleta de Cores</h1>
+  <button id="clear-board">Limpar</button>
   <section id="color-palette">
     <div class="color c1"></div>
     <div class="color c2"></div>
@@ -16,7 +17,6 @@
     <div class="color c4"></div>
   </section>
   <section id="pixel-board"></section>
-  
   <script type="text/javaScript" src="script.js"></script>  
 </body>
 </html>
