fazendo as cores serem aleatorias

--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
 </head>
 <body>
   <h1 id="title">Paleta de Cores</h1>
-  <button id="clear-board">Limpar</button>
   <section id="color-palette">
     <div class="color c1"></div>
     <div class="color c2"></div>
     <div class="color c3"></div>
     <div class="color c4"></div>
   </section>
-  <section id="pixel-board"></section>
+  <div>
+    <button id="clear-board">Limpar</button>
+  </div>
+  <div id="pixel-board"></div>
   <script type="text/javaScript" src="script.js"></script>  
 </body>
 </html>
