Html comments fixes

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <!-- Paletas de Cores - Navegação -->
     <nav id="color-palette"></nav>
 
+    <!-- Board Size -->
     <div class="set-size">
       <input id="board-size" type="number" min="1"/>
       <button id="generate-board">VQV</button>
