--- a/index.html
+++ b/index.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
   <html>
+    
     <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale-1.0">
-      <title>Paleta de Cores</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale-1.0">
+        <title>Paleta de Cores</title>
     </head>   
-
     <body>
-      <title>
-        <h1 id="title">
-          Paleta de Cores
-        </h1>
-      </title>
+    <h1 id="title">Paleta de Cores</h1>
+        
 
     </body>
 
