--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
     <h1 id="title">Paleta de Cores</h1>
 
     <nav id="color-palette">
-        <div class="color">paleta 1</div>
+        <div class="color selected">paleta 1</div>
         <div class="color">paleta 2</div>
         <div class="color">paleta 3</div>
         <div class="color">paleta 4</div>
     </nav>
-
+	
+		<button id="clear-board">Limpar</button>
+	
 		<section id="table">
 			<table id="pixel-board">
 				<tr>
@@ -62,6 +64,7 @@
 			</table>
 		</section>
 			
+
 				
 			
 		
