--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="color"></div>
     <div class="color"></div>
   </div>
-
+  <button></button>
   <div id="pixel-board"></div>
   
   <script type="text/javascript" src="script.js"></script>
