--- a/index.html
+++ b/index.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="stylesheet" href="style.css">
+  <title>Projeto Pixel Art</title>
 </head>
 <body>
-  <h1 id="title">Paleta de Cores</h1>
-  <div id="color-palette"> 
-    <div class="color" id="color1">1</div>
-    <div class="color" id="color2">2</div>
-    <div class="color" id="color3">3</div>
-    <div class="color" id="color4">4</div>
+  <h1 id=title>Paleta de Cores</h1>
+  <div id=color-palette>
+  <div class='selected color' id=color1></div>
+  <div class='color' id=color2></div>
+  <div class='color' id=color3></div>
+  <div class='color' id=color4></div>
   </div>
-
-  </div>
+<br>
+<div class='button'>
+<button id='clear-board'>Limpar</button>
+</div>
+<br>
+<div id='pixel-board'></div>
+<script type='text/javascript' src='script.js'></script>
 </body>
 </html>
