--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
         <h1 id="title">Paleta de Cores</h1>
     </header>
     <section>
-        <table id="color-palette">
-            <tr>
-                <td id="black" class="color"></td>
-                <td id="red" class="color"></td>
-                <td id="blue" class="color"></td>
-                <td id="green" class="color"></td>
-            </tr>
+            <nav>
+                <ul id="color-palette">
+                    <li id="black" class="color selected"></li>
+                    <li id="red" class="color"></li>
+                    <li id="blue" class="color"></li>
+                    <li id="green" class="color"></li>
+                </ul>
+            </nav>
         </table>
     </section>
     <script src="script.js"></script>
