9 - Crie um botão que, ao ser clicado, limpa o quadro preenchendo a cor de todos seus pixels com branco. DONE

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
 	<meta charset="UTF-8">
@@ -19,10 +19,15 @@
 		<div class="color"></div>
 		<div class="color"></div>
 	</section>
+	
+	<section>
+		<button id="clear-board" type="reset">Limpar</button>
+	</section>
 
 	<section>
 		<table id="pixel-board"></table>
 	</section>
+
 
 	<script type="text/javascript" src="script.js"></script>
 </body>
