--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <div class="color color3"></div>
       <div class="color color4"></div>
     </div>
+    <button id="clear-board">Limpar</button>
     <div id="pixel-board">
 
     </div>
