--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css"> 
-    <title>Projeto Pixels Art</title>
+    <title>Document</title>
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -16,9 +17,7 @@
         <div class="color" id="color3"></div>
         <div class="color" id="color4"></div>
     </div>
-
     <input type="button" id="clear-board" value="Limpar">
-
     <div id="pixel-board">
         <div class="pixel"></div>
         <div class="pixel"></div>
@@ -46,7 +45,6 @@
         <div class="pixel"></div>
         <div class="pixel"></div>
     </div>
-
     <script src="script.js" type="text/javascript"></script>
 </body>
 </html>
