--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale-1.0">
         <title>Paleta de Cores</title>
+        <link rel="stylesheet" href="style.css">
     </head>   
     <body>
-    <h1 id="title">Paleta de Cores</h1>
-        
-
+      <h1 id="title">Paleta de Cores</h1>
+      <div id="color-palette"></div>
+        <div class ="color"></div>
+      <script src="script.js"></script>
     </body>
 
 
@@ -17,8 +19,4 @@
 
 
 
-
-
-
-
-</html>
+  </html>
