--- a/index.html
+++ b/index.html
@@ -14,13 +14,12 @@
     <section>
             <nav>
                 <ul id="color-palette">
-                    <li id="black" class="color selected"></li>
+                    <li id="black" class="color"></li>
                     <li id="red" class="color"></li>
                     <li id="blue" class="color"></li>
                     <li id="green" class="color"></li>
                 </ul>
             </nav>
-        </table>
     </section>
     <script src="script.js"></script>
 </body>
