--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   </section>
   <div>
     <button id="clear-board">Limpar</button>
-    <input id="hW" type="text">
-    <button id="tamanho">Alterar Tamanho</button>
+    <input id="board-size" type="text">
+    <button id="generate-board">Alterar Tamanho</button>
   </div>
   <div id="pixel-board"></div>
   <script type="text/javaScript" src="script.js"></script>  
