--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </section>
   <div>
     <button id="clear-board">Limpar</button>
-    <input id="board-size" type="text">
+    <input id="board-size" type="number" min="0">
     <button id="generate-board">Alterar Tamanho</button>
   </div>
   <div id="pixel-board"></div>
