Commit 3 - Projeto Javascript - Pixels Art - Envio do item 9

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     <div class="color" style="background-color: blue;"></div>
     <div class="color" style="background-color: green;"></div>
   </div>
+  <div>
+    <br>
+    <button id="clear-board" onclick=".pixel">Limpar</button>
+    </div><br>
   <div id="pixel-board"></div>
   <script type="text/javascript" src="script.js"></script>
 </body>
