arrumado lint css, js. concluido usuario definir tabela

--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
 <body>
   <h1 id="title">Paleta de Cores</h1>
   <section id="color-palette">
-    <div class="color selected"></div>
-    <div class="color"></div>
-    <div class="color"></div>
-    <div class="color"></div>
+    <section class="color selected"></section>
+    <section class="color"></section>
+    <section class="color"></section>
+    <section class="color"></section>
   </section>
   <button id="clear-board">Limpar</button>
+  <input type="text" id="board-size" placeholder=''>
+  <button id="generate-board">VQV</button>
   <div id="pixel-board">
     <div>
       <div class="pixel"></div>
@@ -53,6 +55,8 @@
       <div class="pixel"></div>
     </div>
   </div>
+  
+    
   <script src="/script.js"></script>
 </body>
 </html>
