Commit 7 - Projeto Javascript - Pixels Art - Correçao do item 9

--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
   </div>
   <div>
     <br>
+    <div>
     <button id="clear-board" onclick=".pixel">Limpar</button>
-    </div><br>
+    </div>
+  </div><br>
   <div id="pixel-board"></div>
   <script type="text/javascript" src="script.js"></script>
 </body>
