--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <div class="color"></div>
   </div>
   <button></button>
+  <input type="number" min="5" max="50">
+  <button></button>
   <div id="pixel-board"></div>
   
   <script type="text/javascript" src="script.js"></script>
