--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <h1 id="title">Paleta de Cores</h1>
   </header>
   <div id="color-palette">
-    <div class="color selected" style="background-color: black;"></div>
-    <div class="color" style="background-color: red;"></div>
-    <div class="color" style="background-color: blue;"></div>
-    <div class="color" style="background-color: green;"></div>
+    <div id="1" class="color selected" style="background-color: black;"></div>
+    <div id="2" class="color" style="background-color: red;"></div>
+    <div id="3" class="color" style="background-color: blue;"></div>
+    <div id="4" class="color" style="background-color: green;"></div>
   </div>
 
   <br></br> 
