--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   <title>PIXELS ART</title>
 </head>
 <body>
+  <h1 id="title">Paleta de Cores</h1>
+  <div id="color-palette"></div>
+  <button id="clear-board">Limpar</button>
+  <input id="board-size">
+  <button id="generate-board">VQV</button>
+  <div id="pixel-board"></div>
   <script src="script.js"></script>
 </body>
 </html>
