--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </div>
 
   <br></br> 
-    <button id="clear-board" onclick="clearColor()">Limpar</button>
+    <button id="clear-board">Limpar</button>
   <br></br> 
   
 
