--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <button id="clear-board">Limpar</button>
   <input id="board-size">
   <button id="generate-board">VQV</button>
-  <div id="pixel-board"></div>
+  <table id="pixel-board"></table>
   <script src="script.js"></script>
 </body>
 </html>
