--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
   <title>PIXELS ART</title>
 </head>
 <body>
-  <h1 id="title">Paleta de Cores</h1>
-  <div id="color-palette"></div>
-  <button id="clear-board">Limpar</button>
-  <input id="board-size">
-  <button id="generate-board">VQV</button>
-  <table id="pixel-board"></table>
+  <h1 id="title" class="textCenter">Paleta de Cores</h1>
+  <div id="color-palette" class="justifyDivs"></div>
+  <div id="container" class="justifyDivs">
+    <button id="clear-board">Limpar</button>
+    <input id="board-size">
+    <button id="generate-board">VQV</button>
+  </div>
+  <table id="pixel-board" class="center"></table>
   <script src="script.js"></script>
 </body>
 </html>
