--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Document</title>
 </head>
 <body>
+    <article id="estilizacao-principal">
+        <h3 class="nome">Arthur Menezes Correa</h3>
     <h1 id="title">Paleta de Cores</h1>
     <div id="color-palette">
         <div class="color div1" onclick="pintarQuadrado('black')"></div>
@@ -18,6 +20,7 @@
     <div id="pixel-board">
 
     </div>
+</article>
     <script src="script.js"></script>
 </body>
 </html>
