--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="color"></div>
   </div>
   <button></button>
-  <input type="number" min="5" max="50">
+  <input type="number" min="1" >
   <button></button>
   <div id="pixel-board"></div>
   
