--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
     <div class="color"></div>
     <div class="color"></div>
   </div>
-  <button></button>
-  <input type="number" min="1" >
-  <button></button>
+  <div>
+    <button></button>
+    <input type="number" min="1" >
+    <button></button>
+  </div>
   <div id="pixel-board"></div>
   
   <script type="text/javascript" src="script.js"></script>
