--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   </header>
   <div id="color-palette"></div>
   <div class="btn">
+    <input min="5" max="50" type="number" name="texto" id="board-size">
+    <button id="generate-board">VQV</button>
     <button id="clear-board">Limpar</button>
   </div>
   <div id="pixel-board"></div>
