--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
       <div class="color color3"></div>
       <div class="color color4"></div>
     </div>
+
+    <input id="board-size" type="text">
+    <button id="generate-board">VQV</button>
+
     <button id="clear-board">Limpar</button>
+
     <div id="pixel-board">
 
     </div>
