Melhoria do código HTML e CSS ainda tenho que fazer o JavaScript

--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Projeto Pixel Art</title>
+  <script type="text/javascript" src="script.js"></script>
+  <title>Projeto Pixel Art [Aderson Silva]</title>
 </head>
 <body>
   <h1 id=title>Paleta de Cores</h1>
-  <div id=color-palette>
+  <div id='color-palette'>
   <div class='selected color' id=color1></div>
   <div class='color' id=color2></div>
   <div class='color' id=color3></div>
@@ -21,6 +22,5 @@
 </div>
 <br>
 <div id='pixel-board'></div>
-<script type='text/javascript' src='script.js'></script>
 </body>
 </html>
