--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="color color4"></div>
     </div>
 
-    <input id="board-size" type="number">
+    <input id="board-size" min="1" type="number">
     <button id="generate-board">VQV</button>
 
     <button id="clear-board">Limpar</button>
