--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <div class="color div3" onclick="pintarQuadrado('brown')"></div>
         <div class="color div4" onclick="pintarQuadrado('cadetblue')"></div>
     </div>
+    <button id="clear-board" onclick="limpar()">Limpar</button>
     <div id="pixel-board">
 
     </div>
