Tamanho definido pelo usuario

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
     <button id="clear-board">Limpar</button>
 
     <form action="">
-        <input id="board-size" type="number" placeholder="Nº Pixels" min="1" max="50">
+        <input id="board-size" type="number" min="1" max="50" placeholder="Nº Pixels">
         <button id="generate-board">VQV</button>
     </form>
 
     <table id="pixel-board">
-        <tr id="teste">
+        <tr>
             <td class="pixel"></td>
             <td class="pixel"></td>
             <td class="pixel"></td>
