10 - Faça o quadro de pixels ter seu tamanho definido pela pessoa usuária. DONE

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Pixels Art</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
-
 </head>
 
 <body>
@@ -22,6 +21,8 @@
 	
 	<section>
 		<button id="clear-board" type="reset">Limpar</button>
+		<input id="board-size" type="number" name="numb" min="0"> <!-- this min attribute I took from https://stackoverflow.com/questions/7372067/is-there-any-way-to-prevent-input-type-number-getting-negative-values -->
+		<button id="generate-board" type="submit">VQV</button>
 	</section>
 
 	<section>
