--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <div class="color color-blue"></div>
     <div class="color color-green"></div>
   </section>
+  <section id="pixel-board" class="pixelBoard">
+  </section>
   <script src="script.js"></script>
 </body>
 </html>
