--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1 id="title">Paleta de Cores</h1>
   </header>
   <section id="color-palette">
-    <div class="color color-black"></div>
+    <div class="color color-black selected"></div>
     <div class="color color-red"></div>
     <div class="color color-blue"></div>
     <div class="color color-green"></div>
