--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <div class ="color"></div>
       
       <script>
+        document.querySelectorAll(".color")[0].style.backgroundColor = "black"
         document.querySelectorAll(".color")[1].style.backgroundColor = "blue"
         document.querySelectorAll(".color")[2].style.backgroundColor = "green"
         document.querySelectorAll(".color")[3].style.backgroundColor = "red"
