--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <h1 id="title">Paleta de Cores</h1>
   </header>
   <section id="color-palette">
-    <div class="color color-black selected"></div>
-    <div class="color color-red"></div>
-    <div class="color color-blue"></div>
-    <div class="color color-green"></div>
+    <div class="color selected" id="black"></div>
+    <div class="color" id="colorOne"></div>
+    <div class="color" id="colorTwo"></div>
+    <div class="color" id="colorThree"></div>
   </section>
   <section id="pixel-board" class="pixelBoard">
   </section>
