--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
         <div class="color div4" onclick="pintarQuadrado('cadetblue')"></div>
     </div>
     <button id="clear-board" onclick="limpar()">Limpar</button>
+    <div id="definir-tamanho">
+        <input type="number" id="board-size" min="0">
+        <button id="generate-board" onclick="criarPixel()">VQV</button>
+    </div>
     <div id="pixel-board">
 
     </div>
