trocando div por span

--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
     </header>
     <section>
         <div id='color-palete'>
-            <div id="color">cor1</div>
-            <div id="color">cor2</div>
-            <div id="color">cor3</div>
-            <div id="color">cor4</div>
+            <span class = 'color selected' id = black>preto</span>
+            <span class = color id = blue>azul</span>
+            <span class = color id = yellow>amarelo</span>
+            <span class = color id = red>vermelho</span>
         </div>
-        <div id="pixel-board"></div>
+        <div id="pixel-board">
+
+        </div>
     </section>
 </body>
 </html>
