voltando para div e criando grade de pixel

--- a/index.html
+++ b/index.html
@@ -13,13 +13,47 @@
     </header>
     <section>
         <div id='color-palete'>
-            <span class = 'color selected' id = black>preto</span>
-            <span class = color id = blue>azul</span>
-            <span class = color id = yellow>amarelo</span>
-            <span class = color id = red>vermelho</span>
+            <div id="color">preta</div>
+            <div id="color">vermelha</div>
+            <div id="color">Azul</div>
+            <div id="color">verde</div>
         </div>
         <div id="pixel-board">
-
+            <div class="row">
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+            </div>
+            <div class="row">
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+            </div>
+            <div class="row">
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+            </div>
+            <div class="row">
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+            </div>
+            <div class="row">
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+            </div>
         </div>
     </section>
 </body>
