--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
     <title>Document</title>
 </head>
 <body>
     <h1 id ="title"> Paleta de Cores </h1>
+    <div id ="color-pallete">
+        <span class ="color">paleta 1</span>
+        <span class ="color">paleta 2</span>
+        <span class ="color">paleta 3</span>
+        <span class ="color">paleta 4</span>
+    </div>
 </body>
 </html>
