--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <h1 id ="title"> Paleta de Cores </h1>
-    <div id ="color-pallete">
+    <nav id ="color-pallete">
         <span class ="color">paleta 1</span>
         <span class ="color">paleta 2</span>
         <span class ="color">paleta 3</span>
         <span class ="color">paleta 4</span>
-    </div>
+    </nav>
 </body>
 </html>
