--- a/index.html
+++ b/index.html
@@ -5,56 +5,53 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Pixels-Arts</title>
+    <title>Pixel art</title>
 </head>
 <body>
-    <header>
-        <h1 id='title'>Paleta de Cores</h1>
-    </header>
-    <section>
-        <div id='color-palete'>
-            <div id="color">preta</div>
-            <div id="color">vermelha</div>
-            <div id="color">Azul</div>
-            <div id="color">verde</div>
-        </div>
-        <div id="pixel-board">
-            <div class="row">
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-            </div>
-            <div class="row">
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-            </div>
-            <div class="row">
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-            </div>
-            <div class="row">
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-            </div>
-            <div class="row">
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-            </div>
-        </div>
-    </section>
+    <h1 id="titulo">Paleta de Cores</h1>
+    <div id="color-palete">
+        <div class="color" style="background-color:black;" onclick="setPenColour('black')"></div>
+        <div class="color" style="background-color:chartreuse;" onclick="setPenColour('chartreuse')"></div>
+        <div class="color" style="background-color:blue;" onclick="setPenColour('blue')"></div>
+        <div class="color" style="background-color:red;" onclick="setPenColour('red')"></div>
+    </div>
+    <div id="art">
+      <div id="pixel-board">
+        <div class="pixel" onclick="setPixelColour(this)"></div>
+        <div class="pixel" onclick="setPixelColour(this)"></div>
+        <div class="pixel" onclick="setPixelColour(this)"></div>
+        <div class="pixel" onclick="setPixelColour(this)"></div>
+        <div class="pixel" onclick="setPixelColour(this)"></div>
+      </div>
+      <div id="pixel-board">
+        <div class="pixel" onclick="setPixelColour(this)"></div>
+        <div class="pixel" onclick="setPixelColour(this)"></div>
+        <div class="pixel" onclick="setPixelColour(this)"></div>
+        <div class="pixel" onclick="setPixelColour(this)"></div>
+        <div class="pixel" onclick="setPixelColour(this)"></div>
+      </div>
+      <div id="pixel-board">
+        <div class="pixel" onclick="setPixelColour(this)"></div>
+        <div class="pixel" onclick="setPixelColour(this)"></div>
+        <div class="pixel" onclick="setPixelColour(this)"></div>
+        <div class="pixel" onclick="setPixelColour(this)"></div>
+        <div class="pixel" onclick="setPixelColour(this)"></div>
+      </div>
+      <div id="pixel-board">
+        <div class="pixel" onclick="setPixelColour(this)"></div>
+        <div class="pixel" onclick="setPixelColour(this)"></div>
+        <div class="pixel" onclick="setPixelColour(this)"></div>
+        <div class="pixel" onclick="setPixelColour(this)"></div>
+        <div class="pixel" onclick="setPixelColour(this)"></div>
+      </div>
+      <div id="pixel-board">
+        <div class="pixel" onclick="setPixelColour(this)"></div>
+        <div class="pixel" onclick="setPixelColour(this)"></div>
+        <div class="pixel" onclick="setPixelColour(this)"></div>
+        <div class="pixel" onclick="setPixelColour(this)"></div>
+        <div class="pixel" onclick="setPixelColour(this)"></div>
+      </div>
+    </div>      
+  <script src="script.js"></script>    
 </body>
 </html>
