--- a/index.html
+++ b/index.html
@@ -11,15 +11,18 @@
     <h1 id="title">Paleta de Cores</h1>
 
     <div id="tabela1">
-
     </div>
+
 
     <div id="botao-limpa">
-
     </div>
 
-    <div id="tabela2">
+    
+    <div id="botao-add">
+    </div>
+    
 
+    <div id="tabela2">
     </div>
    
 
