--- a/index.html
+++ b/index.html
@@ -14,11 +14,14 @@
     </div>
 
 
-    <div id="botao-limpa">
-    </div>
+    <!-- <div id="botao-limpa">
+    </div> -->
 
     
     <div id="botao-add">
+        <div id="botao-limpa">
+        </div>
+
     </div>
     
 
