--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
     </header>
 
     <div id="color-palette"></div>
-    <div id="clear-board"></div>
-    <input id="board-size" type="number" min="1" max="50">
-    <button id="generate-board"></button>
-    <div id="pixel-board"></div>
+    <div id="board-config">
+      <div id="clear-board"></div>
+      <input id="board-size" type="number" min="1" max="50">
+      <button id="generate-board"></button>
+    </div>
+    <table id="pixel-board"></table>
             
     <script src="script.js"></script>
 </body>
