--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0 ">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title></title>
   <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
@@ -14,15 +14,15 @@
   </header>
   <div id="color-palette">
 
-    <div class="color"></div>
-    <div class="color"></div>
-    <div class="color"></div>
-    <div class="color"></div>
+    <div class="color" id = "preto"></div>
+    <div class="color" id="rosa"></div>
+    <div class="color"id = "verdeagua"></div>
+    <div class="color" id= "roxo"></div>
 
   </div>
   </br>
   <div id="pixel-board">
-    <div class="linha1">
+    <div id="linha1">
       <div class="pixel"></div>
       <div class="pixel"></div>
       <div class="pixel"></div>
