--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="color" id= "roxo"></div>
 
   </div>
-  </br>
+  <button id="clear-board">Limpar</button>
   <div id="pixel-board">
     <div id="linha1">
       <div class="pixel"></div>
