I saw a penguim yesterday

--- a/index.html
+++ b/index.html
@@ -1,27 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <link rel="stylesheet" href="./style.css">
-        <title>Platae ed Creos</title>
-    </head>
+<html lang="en-US">
+<head>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="style.css">
+  <title>Platae ed Creos</title>
+</head>
+<body>
+  <main>
 
-    <body>
-        <header>
-            <h1 id="title">Paleta de Cores</h1>
-        </header>
-
-        <section id="color-palette">
-            <div id="one" class="color selected" ></div>
-            <div id="two" class="color" ></div>
-            <div id="three" class="color" ></div>
-            <div id="four" class="color" ></div>
-        </section>
-        <div id="button">
-            <button id="clean">Press me</button>
-        </div>
-        <table id="pixel-board"></table>
-        <script src="./script.js"></script>
-    </body>
-
+  </main>
+  <script src="script.js"></script>
+</body>
 </html>
