--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <!-- Board Size -->
     <div class="set-size">
-      <input id="board-size" type="number" min="1"/>
+      <input id="board-size" type="number"/>
       <button id="generate-board">VQV</button>
     </div>
 
