--- a/index.html
+++ b/index.html
@@ -1,35 +1,34 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 
 <head>
-<!-- Projeto Pixels Art -->
-<meta http-equiv="content-type" content="text/html; charset=utf-8">
-<meta name="author" content="RobsonCardozo">
-<title>Pixel Art's Project</title>
-<link rel="stylesheet" href="style.css">
+  <!-- Projeto Pixels Art -->
+  <meta http-equiv="content-type" content="text/html; charset=utf-8">
+  <meta name="author" content="RobsonCardozo">
+  <title>Pixel Art's Project - Robson Cardozo</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
-<body>    
-    <!-- Título em h1 -->
-    <h1 id="title">Paleta de Cores</h1>
-
-    <!-- Paletas de Cores - Navegação -->
-    <nav id="color-palette"></nav>
-
-    <!-- Board Size -->
-    <div class="set-size">
-      <input id="board-size" type="number"/>
-      <button id="generate-board">VQV</button>
+<body>
+  <header id="title"><h1>Paleta de Cores</h1><header>
+    <main>
+    <div id="color-palette">
+      <span class="color selected"></span>
+      <span class="color"></span>
+      <span class="color"></span>
+      <span class="color"></span>
     </div>
 
-    <!-- Botão Limpar -->
-    <button id="clear-board">Limpar</button>
+    <div id="board-tools">
+      <input id="board-size" type="number" min="1" max="50" maxlength="2">
+      <button id="generate-board">VQV</button>
+      <button id="clear-board" type="button">Limpar</button>
+    </div>
 
-    <!-- Seção Pixel Board -->
-    <section id="pixel-board"></section>
-    
-    <!-- Scripts JS -->
-    <script src="script.js"></script>
-  </body>
+    <div id="pixel-board">
 
+    </div>
+  </main>
+</body>
+<script src="script.js"></script>
 </html>
