--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <!-- Projeto Pixels Art -->
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
   <meta name="author" content="RobsonCardozo">
-  <title>Pixel Art's Project - Robson Cardozo</title>
+  <title>Paleta de Cores</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
