--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 </head>
 
 <body>
-  <header id="title"><h1>Paleta de Cores</h1><header>
+  <h1 id="title">Paleta de Cores</h1>
     <main>
     <div id="color-palette">
       <span class="color selected"></span>
+      <span class="color"></span>
       <span class="color"></span>
       <span class="color"></span>
       <span class="color"></span>
