--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
         <title>Pixels Art</title>
     </head>
     <body>
-        <h1 id="title">Paleta de Cores</h1>
-
-        <section id="color-palette">
-            <div class="color" style="background-color: black;"></div>
-            <div class="color" style="background-color: blue;"></div>
-            <div class="color" style="background-color: red;"></div>
-            <div class="color" style="background-color: green;"></div>
-        </section>
+        <header>
+            <h1 id="title">Paleta de Cores</h1>
+        </header>
+        <main>
+            <section id="color-palette"></section>
+        </main>
+        <script src="./script.js"></script>
     </body>
 </html>
